Fix #936
Create hidden link that becomes visible on focus to switch the editor out of place, and use our "mobile mirror" instead.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2987,8 +2987,13 @@ input {
   font-family: SourceCodeProRegular, Menlo, Monaco, consolas, monospace;
   font-size: 14px;
 }
-#bin .editbox .CodeMirror pre {
+#bin .editbox .CodeMirror pre,
+.mobile textarea {
   font-family: SourceCodeProRegular, Menlo, Monaco, consolas, monospace;
+}
+
+.mobile textarea {
+  background: transparent;
 }
 
 .editbox .CodeMirror,
@@ -5392,3 +5397,42 @@ a[data-pro]:hover:after {
   color: #FF4136;
 }
 
+.visuallyhidden {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+}
+
+/*
+ * Extends the .visuallyhidden class to allow the element to be focusable
+ * when navigated to via the keyboard: h5bp.com/p
+ */
+
+.visuallyhidden.focusable:active,
+.visuallyhidden.focusable:focus {
+  clip: auto;
+  height: auto;
+  margin: 0;
+  overflow: visible;
+  position: static;
+  width: auto;
+}
+
+#enableUniversalEditorLabel {
+  color: #00e;
+  position: fixed;
+  top: 7px;
+  left: 0;
+  z-index: 999999;
+  font-size: 24px;
+  background: white;
+  padding: 20px;
+  vertical-align: top;
+  /*transform: scale(1.2);*/
+  transform-origin: 0 0;
+}
